@@ -54,14 +54,14 @@ static const int never_allocate_rtcp = 0;
 int rare_event(void)
 {
 	if(dos)
-		return (((unsigned long)random()) %1000 == 777);
+		return (((unsigned long)turn_random()) %1000 == 777);
 	return 0;
 }
 
 int not_rare_event(void)
 {
 	if(dos)
-		return ((((unsigned long)random()) %1000) < 900);
+		return ((((unsigned long)turn_random()) %1000) < 200);
 	return 0;
 }
 
@@ -78,7 +78,7 @@ static int get_allocate_address_family(ioa_addr *relay_addr) {
 
 static SSL* tls_connect(ioa_socket_raw fd, ioa_addr *remote_addr)
 {
-	int ctxtype = (int)random()%root_tls_ctx_num;
+	int ctxtype = (int)(((unsigned long)turn_random())%root_tls_ctx_num);
 
 	SSL *ssl = SSL_new(root_tls_ctx[ctxtype]);
 
@@ -512,10 +512,10 @@ static int clnet_allocate(int verbose,
 		  int fd = clnet_info->fd;
 		  SSL* ssl = clnet_info->ssl;
 
-		  int close_now = (int)(random()%2);
+		  int close_now = (int)(turn_random()%2);
 
 		  if(close_now) {
-			  int close_socket = (int)(random()%2);
+			  int close_socket = (int)(turn_random()%2);
 			  if(ssl && !close_socket) {
 				  SSL_shutdown(ssl);
 				  SSL_free(ssl);
@@ -654,7 +654,7 @@ static int turn_channel_bind(int verbose, uint16_t *chn,
 		stun_buffer message;
 
 		if(negative_test) {
-			*chn = stun_set_channel_bind_request(&message, peer_addr, (u16bits)random());
+			*chn = stun_set_channel_bind_request(&message, peer_addr, (u16bits)turn_random());
 		} else {
 			*chn = stun_set_channel_bind_request(&message, peer_addr, *chn);
 		}
@@ -941,19 +941,19 @@ int start_connection(uint16_t clnet_remote_port0,
 
 			if(extra_requests) {
 				const char *sarbaddr = "164.156.178.190";
-				if(random() % 2 == 0)
+				if(turn_random() % 2 == 0)
 					sarbaddr = "2001::172";
 				ioa_addr arbaddr;
 				make_ioa_addr((const u08bits*)sarbaddr, 333, &arbaddr);
 				int i;
-				int maxi = (unsigned short)random() % EXTRA_CREATE_PERMS;
+				int maxi = (unsigned short)turn_random() % EXTRA_CREATE_PERMS;
 				for(i=0;i<maxi;i++) {
 					u16bits chni=0;
-					int port = (unsigned short)random();
+					int port = (unsigned short)turn_random();
 					if(port<1024) port += 1024;
 					addr_set_port(&arbaddr, port);
 					u08bits *u=(u08bits*)&(arbaddr.s4.sin_addr);
-					u[(unsigned short)random()%4] = u[(unsigned short)random()%4] + 1;
+					u[(unsigned short)turn_random()%4] = u[(unsigned short)turn_random()%4] + 1;
 					//char sss[128];
 					//addr_to_string(&arbaddr,(u08bits*)sss);
 					//printf("%s: 111.111: %s\n",__FUNCTION__,sss);
@@ -971,18 +971,18 @@ int start_connection(uint16_t clnet_remote_port0,
 
 			if(extra_requests) {
 				const char *sarbaddr = "64.56.78.90";
-				if(random() % 2 == 0)
+				if(turn_random() % 2 == 0)
 					sarbaddr = "2001::172";
 				ioa_addr arbaddr[EXTRA_CREATE_PERMS];
 				make_ioa_addr((const u08bits*)sarbaddr, 333, &arbaddr[0]);
 				int i;
-				int maxi = (unsigned short)random() % EXTRA_CREATE_PERMS;
+				int maxi = (unsigned short)turn_random() % EXTRA_CREATE_PERMS;
 				for(i=0;i<maxi;i++) {
 					if(i>0)
 						addr_cpy(&arbaddr[i],&arbaddr[0]);
-					addr_set_port(&arbaddr[i], (unsigned short)random());
+					addr_set_port(&arbaddr[i], (unsigned short)turn_random());
 					u08bits *u=(u08bits*)&(arbaddr[i].s4.sin_addr);
-					u[(unsigned short)random()%4] = u[(unsigned short)random()%4] + 1;
+					u[(unsigned short)turn_random()%4] = u[(unsigned short)turn_random()%4] + 1;
 					//char sss[128];
 					//addr_to_string(&arbaddr[i],(u08bits*)sss);
 					//printf("%s: 111.111: %s\n",__FUNCTION__,sss);
@@ -991,7 +991,7 @@ int start_connection(uint16_t clnet_remote_port0,
 			}
 		} else {
 
-			int before=(random()%2 == 0);
+			int before=(turn_random()%2 == 0);
 
 			if(before) {
 				if (turn_create_permission(verbose, clnet_info, &peer_addr, 1) < 0) {
@@ -1007,18 +1007,18 @@ int start_connection(uint16_t clnet_remote_port0,
 
 			if(extra_requests) {
 				const char *sarbaddr = "64.56.78.90";
-				if(random() % 2 == 0)
+				if(turn_random() % 2 == 0)
 					sarbaddr = "2001::172";
 				ioa_addr arbaddr[EXTRA_CREATE_PERMS];
 				make_ioa_addr((const u08bits*)sarbaddr, 333, &arbaddr[0]);
 				int i;
-				int maxi = (unsigned short)random() % EXTRA_CREATE_PERMS;
+				int maxi = (unsigned short)turn_random() % EXTRA_CREATE_PERMS;
 				for(i=0;i<maxi;i++) {
 					if(i>0)
 						addr_cpy(&arbaddr[i],&arbaddr[0]);
-					addr_set_port(&arbaddr[i], (unsigned short)random());
+					addr_set_port(&arbaddr[i], (unsigned short)turn_random());
 					u08bits *u=(u08bits*)&(arbaddr[i].s4.sin_addr);
-					u[(unsigned short)random()%4] = u[(unsigned short)random()%4] + 1;
+					u[(unsigned short)turn_random()%4] = u[(unsigned short)turn_random()%4] + 1;
 					//char sss[128];
 					//addr_to_string(&arbaddr,(u08bits*)sss);
 					//printf("%s: 111.111: %s\n",__FUNCTION__,sss);
@@ -1179,19 +1179,19 @@ int start_c2c_connection(uint16_t clnet_remote_port0,
 
 		if(extra_requests) {
 			const char *sarbaddr = "164.156.178.190";
-			if(random() % 2 == 0)
+			if(turn_random() % 2 == 0)
 				sarbaddr = "2001::172";
 			ioa_addr arbaddr;
 			make_ioa_addr((const u08bits*)sarbaddr, 333, &arbaddr);
 			int i;
-			int maxi = (unsigned short)random() % EXTRA_CREATE_PERMS;
+			int maxi = (unsigned short)turn_random() % EXTRA_CREATE_PERMS;
 			for(i=0;i<maxi;i++) {
 				u16bits chni=0;
-				int port = (unsigned short)random();
+				int port = (unsigned short)turn_random();
 				if(port<1024) port += 1024;
 				addr_set_port(&arbaddr, port);
 				u08bits *u=(u08bits*)&(arbaddr.s4.sin_addr);
-				u[(unsigned short)random()%4] = u[(unsigned short)random()%4] + 1;
+				u[(unsigned short)turn_random()%4] = u[(unsigned short)turn_random()%4] + 1;
 				//char sss[128];
 				//addr_to_string(&arbaddr,(u08bits*)sss);
 				//printf("%s: 111.111: %s\n",__FUNCTION__,sss);
@@ -1203,18 +1203,18 @@ int start_c2c_connection(uint16_t clnet_remote_port0,
 
 		if(extra_requests) {
 			const char *sarbaddr = "64.56.78.90";
-			if(random() % 2 == 0)
+			if(turn_random() % 2 == 0)
 				sarbaddr = "2001::172";
 			ioa_addr arbaddr[EXTRA_CREATE_PERMS];
 			make_ioa_addr((const u08bits*)sarbaddr, 333, &arbaddr[0]);
 			int i;
-			int maxi = (unsigned short)random() % EXTRA_CREATE_PERMS;
+			int maxi = (unsigned short)turn_random() % EXTRA_CREATE_PERMS;
 			for(i=0;i<maxi;i++) {
 				if(i>0)
 					addr_cpy(&arbaddr[i],&arbaddr[0]);
-				addr_set_port(&arbaddr[i], (unsigned short)random());
+				addr_set_port(&arbaddr[i], (unsigned short)turn_random());
 				u08bits *u=(u08bits*)&(arbaddr[i].s4.sin_addr);
-				u[(unsigned short)random()%4] = u[(unsigned short)random()%4] + 1;
+				u[(unsigned short)turn_random()%4] = u[(unsigned short)turn_random()%4] + 1;
 				//char sss[128];
 				//addr_to_string(&arbaddr[i],(u08bits*)sss);
 				//printf("%s: 111.111: %s\n",__FUNCTION__,sss);
@@ -1246,16 +1246,16 @@ int start_c2c_connection(uint16_t clnet_remote_port0,
 
 		if(extra_requests) {
 			const char *sarbaddr = "64.56.78.90";
-			if(random() % 2 == 0)
+			if(turn_random() % 2 == 0)
 				sarbaddr = "2001::172";
 			ioa_addr arbaddr;
 			make_ioa_addr((const u08bits*)sarbaddr, 333, &arbaddr);
 			int i;
-			int maxi = (unsigned short)random() % EXTRA_CREATE_PERMS;
+			int maxi = (unsigned short)turn_random() % EXTRA_CREATE_PERMS;
 			for(i=0;i<maxi;i++) {
-				addr_set_port(&arbaddr, (unsigned short)random());
+				addr_set_port(&arbaddr, (unsigned short)turn_random());
 				u08bits *u=(u08bits*)&(arbaddr.s4.sin_addr);
-				u[(unsigned short)random()%4] = u[(unsigned short)random()%4] + 1;
+				u[(unsigned short)turn_random()%4] = u[(unsigned short)turn_random()%4] + 1;
 				//char sss[128];
 				//addr_to_string(&arbaddr,(u08bits*)sss);
 				//printf("%s: 111.111: %s\n",__FUNCTION__,sss);
