@@ -546,8 +546,8 @@ static mobile_id_t get_new_mobile_id(turn_turnserver* server)
 		sid = sid<<56;
 		do {
 			while (!newid) {
-				newid = (mobile_id_t)random();
-				newid = (newid<<32) + (mobile_id_t)random();
+				newid = (mobile_id_t)turn_random();
+				newid = (newid<<32) + (mobile_id_t)turn_random();
 				if(!newid) {
 					continue;
 				}
@@ -2748,7 +2748,7 @@ static int check_stun_auth(turn_turnserver *server,
 		int i = 0;
 		for(i=0;i<NONCE_LENGTH_32BITS;i++) {
 			u08bits *s = ss->nonce + 4*i;
-			u32bits rand=(u32bits)random();
+			u32bits rand=(u32bits)turn_random();
 			snprintf((s08bits*)s, NONCE_MAX_SIZE-4*i, "%04x",(unsigned int)rand);
 		}
 		ss->nonce_expiration_time = server->ctime + STUN_NONCE_EXPIRATION_TIME;
@@ -2760,7 +2760,7 @@ static int check_stun_auth(turn_turnserver *server,
 			int i = 0;
 			for(i=0;i<NONCE_LENGTH_32BITS;i++) {
 				u08bits *s = ss->nonce + 4*i;
-				u32bits rand=(u32bits)random();
+				u32bits rand=(u32bits)turn_random();
 				snprintf((s08bits*)s, NONCE_MAX_SIZE-4*i, "%04x",(unsigned int)rand);
 			}
 			ss->nonce_expiration_time = server->ctime + STUN_NONCE_EXPIRATION_TIME;
@@ -2848,8 +2848,8 @@ static int check_stun_auth(turn_turnserver *server,
 		/* Stale Nonce check: */
 
 		if(new_nonce) {
-			*err_code = 401;
-			*reason = (const u08bits*)"Unauthorized";
+			*err_code = 438;
+			*reason = (const u08bits*)"Wrong nonce";
 			return create_challenge_response(server,ss,tid,resp_constructed,err_code,reason,nbh,method);
 		}
 
